--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Node.js
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: "20"
+          bun-version: "latest"
 
       - name: Install dependencies
         run: bun install
