core: deps update and info update

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -3,7 +3,7 @@
   "changelog": [
     "@changesets/changelog-github",
     {
-      "repo": "template/starter/package-essential"
+      "repo": "package-essential"
     }
   ],
   "commit": false,
