--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
+  "$schema": "https://biomejs.dev/schemas/1.9.2/schema.json",
   "formatter": {
     "enabled": true,
     "formatWithErrors": false,
@@ -8,27 +8,20 @@
     "lineWidth": 80,
     "lineEnding": "lf",
     "attributePosition": "auto",
-    "ignore": [
-      ".vscode",
-      ".next",
-      ".vercel",
-      ".env",
-      ".changeset",
-      ".husky",
-      "node_modules",
-      "build",
-      "dist"
-    ]
+    "ignore": [".changeset", ".husky", "node_modules", "build", "dist"]
   },
   "organizeImports": {
-    "enabled": true
+    "enabled": true,
+    "ignore": [".changeset", ".husky", "node_modules", "build", "dist"]
   },
   "linter": {
     "enabled": true,
     "rules": {
       "recommended": true,
       "correctness": {
-        "noUnusedVariables": "warn"
+        "recommended": true,
+        "noUnusedVariables": "warn",
+        "noUnusedImports": "warn"
       },
       "style": {
         "recommended": true
@@ -49,17 +42,7 @@
         "recommended": true
       }
     },
-    "ignore": [
-      ".vscode",
-      ".next",
-      ".vercel",
-      ".env",
-      ".changeset",
-      ".husky",
-      "node_modules",
-      "build",
-      "dist"
-    ]
+    "ignore": [".changeset", ".husky", "node_modules", "build", "dist"]
   },
   "javascript": {
     "formatter": {
@@ -72,16 +55,6 @@
       "bracketSameLine": false,
       "quoteStyle": "double",
       "attributePosition": "auto"
-    }
-  },
-  "css": {
-    "formatter": {
-      "enabled": true,
-      "indentStyle": "space",
-      "indentWidth": 2,
-      "lineWidth": 80,
-      "lineEnding": "lf",
-      "quoteStyle": "double"
     }
   },
   "json": {
