--- a/package.json
+++ b/package.json
@@ -15,21 +15,22 @@
     "dev": "pnpm run build && node dist/index.js",
     "lint": "biome lint --write .",
     "format": "biome format --write .",
+    "check": "biome check --write .",
     "typecheck": "tsc --noEmit",
     "prepare": "husky",
     "pub:latest": "changeset publish",
-    "build:prepare": "pnpm run typecheck && pnpm run lint && pnpm run format && pnpm run build",
+    "build:prepare": "pnpm run typecheck && pnpm run lint && pnpm run check && pnpm run format && pnpm run build",
     "dev:prepare": "git pull origin main && pnpm i"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.3",
+    "@biomejs/biome": "^1.9.4",
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.9",
-    "@types/node": "^22.7.4",
+    "@types/node": "^22.8.1",
     "husky": "^9.1.6",
     "rimraf": "^6.0.1",
-    "tsup": "^8.3.0",
-    "typescript": "^5.6.2"
+    "tsup": "^8.3.5",
+    "typescript": "^5.6.3"
   },
-  "packageManager": "pnpm@9.12.0"
+  "packageManager": "pnpm@9.12.2"
 }
