core: update commands

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "typecheck": "tsc --noEmit",
     "prepare": "husky",
     "pub:latest": "changeset publish",
-    "build:prepare": "pnpm run typecheck && pnpm run lint && pnpm run check && pnpm run format && pnpm run build",
+    "build:prepare": "pnpm run typecheck && pnpm run lint && pnpm run format && pnpm run check && pnpm run build",
     "dev:prepare": "git pull origin main && pnpm i"
   },
   "devDependencies": {
