--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,11 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.3/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
+  "vcs": {
+    "enabled": true,
+    "clientKind": "git",
+    "defaultBranch": "master",
+    "useIgnoreFile": true
+  },
   "formatter": {
     "enabled": true,
     "formatWithErrors": false,
@@ -8,11 +14,19 @@
     "lineWidth": 80,
     "lineEnding": "lf",
     "attributePosition": "auto",
-    "ignore": [".changeset", ".husky", "node_modules", "build", "dist"]
+    "includes": [
+      "**",
+      "!**/.changeset",
+      "!**/.husky",
+      "!**/node_modules",
+      "!**/build",
+      "!**/dist"
+    ]
   },
-  "organizeImports": {
+  "assist": {
+    "actions": { "source": { "organizeImports": "on" } },
     "enabled": true,
-    "ignore": [".changeset", ".husky", "node_modules", "build", "dist"]
+    "includes": ["**/*.{js,jsx,ts,tsx}"]
   },
   "linter": {
     "enabled": true,
@@ -24,7 +38,17 @@
         "noUnusedImports": "warn"
       },
       "style": {
-        "recommended": true
+        "recommended": true,
+        "noParameterAssign": "error",
+        "useAsConstAssertion": "error",
+        "useDefaultParameterLast": "error",
+        "useEnumInitializers": "error",
+        "useSelfClosingElements": "error",
+        "useSingleVarDeclarator": "error",
+        "noUnusedTemplateLiteral": "error",
+        "useNumberNamespace": "error",
+        "noInferrableTypes": "error",
+        "noUselessElse": "error"
       },
       "complexity": {
         "recommended": true
@@ -33,7 +57,8 @@
         "recommended": true
       },
       "suspicious": {
-        "recommended": true
+        "recommended": true,
+        "noArrayIndexKey": "off"
       },
       "a11y": {
         "recommended": true
@@ -42,7 +67,14 @@
         "recommended": true
       }
     },
-    "ignore": [".changeset", ".husky", "node_modules", "build", "dist"]
+    "includes": [
+      "**",
+      "!**/.changeset",
+      "!**/.husky",
+      "!**/node_modules",
+      "!**/build",
+      "!**/dist"
+    ]
   },
   "javascript": {
     "formatter": {
